tests/machine/x/kotlin/sort_stable.error
kotlinc: exit status 1
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/workspace/mochi/tests/machine/x/kotlin/sort_stable.kt:15:17: error: unresolved reference: n
}.sortedBy { it.n as Comparable<Any> }
                ^
