tests/machine/x/kotlin/sort_stable.kt
// Generated by Mochi compiler v0.10.26 on 2025-07-17T00:46:28Z
fun String.starts_with(prefix: String): Boolean = this.startsWith(prefix)
// Code generated from sort_stable.mochi

data class Item(var n: Int, var v: String)

val items = mutableListOf(Item(n = 1, v = "a"), Item(n = 1, v = "b"), Item(n = 2, v = "c"))

val result = run {
    val __res = mutableListOf<String>()
    for (i in items) {
        __res.add(i.v)
    }
    __res
}.sortedBy { it.n as Comparable<Any> }

fun main() {
    println(result)
}
